Checking image alone.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           href="starter-template.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,10 +58,10 @@
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
-    </nav>
+    </nav>-->
 
-    <h1>Hello, world!</h1>
-    <img class="image" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/a881b1a0-76ef-4396-bd09-6d0330eb1f52/ddzk89o-aee27f51-ba53-4248-8312-45988fa855a0.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvYTg4MWIxYTAtNzZlZi00Mzk2LWJkMDktNmQwMzMwZWIxZjUyXC9kZHprODlvLWFlZTI3ZjUxLWJhNTMtNDI0OC04MzEyLTQ1OTg4ZmE4NTVhMC5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.ISqqmsO8fHYCAsuyCar-m_rSB6jisYWg25wX4u13PCA" class="img-fluid" alt="Responsive image">
+    <!--<h1>Hello, world!</h1>-->
+    <img class="image" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/a881b1a0-76ef-4396-bd09-6d0330eb1f52/ddzk9aj-39fe4968-d5c9-4f18-aed7-80f2455acd0b.png/v1/fill/w_670,h_1192,q_70,strp/rect10_by_wingsofnightfall_ddzk9aj-pre.jpg?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3siaGVpZ2h0IjoiPD0xNzc4IiwicGF0aCI6IlwvZlwvYTg4MWIxYTAtNzZlZi00Mzk2LWJkMDktNmQwMzMwZWIxZjUyXC9kZHprOWFqLTM5ZmU0OTY4LWQ1YzktNGYxOC1hZWQ3LTgwZjI0NTVhY2QwYi5wbmciLCJ3aWR0aCI6Ijw9MTAwMCJ9XV0sImF1ZCI6WyJ1cm46c2VydmljZTppbWFnZS5vcGVyYXRpb25zIl19.0FshhtoqxH05ZeT2SGEU5lg6Za15cxt0sId6HaEaBZk" class="img-fluid" alt="Responsive image">
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
